--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Mr.Suduku Solver|| Astro-Jr</title>
 </head>
 
@@ -19,7 +20,9 @@
         </table>
     </div>
 
-    <button id="solve-btn">Solve Puzzle</button>
+    <button id="solve-btn">Solve Puzzle <span class="material-symbols-outlined">
+pageview
+    </span></button>
 
     <script src="index.js"></script>
 </body>
